--- a/style.css
+++ b/style.css
@@ -31,5 +31,12 @@ html { box-sizing: border-box; }
 
 body {
 	margin: 0;
+	font-family: 'Playfair Display', serif;
+}
+
+h1,
+h2,
+h3 {
+	font-family: 'Lora', serif;
 }
 
