--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ h3 {
 	color: #3e606b;
 }
 
+img {
+	width: 100%;
+}
 
 .logo{
 	width: 170px;
@@ -134,3 +137,29 @@ ul.navigation {
 	border-radius: 30px;
 	margin: 30px 0;
 }
+
+section.offer {
+	background-color: #f0f0f0;
+}
+
+.product_cards {
+	flex-basis: 25%;
+	flex-grow: 0;
+	background-color: white;
+	border-radius: 5px;
+}
+
+img.product {
+	border-radius: 5px 5px 0 0;
+}
+
+.description {
+	padding: 0px;
+	border-radius: 0 0 5px 5px;
+}
+
+.description p,
+.description h3 {
+	margin: 20px;
+}
+
