--- a/style.css
+++ b/style.css
@@ -147,6 +147,10 @@ ul.navigation {
 	margin: 30px 0;
 }
 
+.button:hover {
+	background-color: #d2567d;
+}
+
 section.offer {
 	background-color: #f0f0f0;
 }
